NavTabs.css .navHeader fix overflow scrolling not to show in y direction

--- a/src/styles/NavTabs.css
+++ b/src/styles/NavTabs.css
@@ -9,7 +9,8 @@
   font-family: Georgia, 'Times New Roman', Times, serif;
   padding: 30px;
   flex-wrap: nowrap !important;
-  overflow: auto;
+  overflow-x: auto;
+  overflow-y: hidden;
 }
 
 .navHeader a {
